--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./sass/main.css">
     <!--Enlace animacion-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>  
     <title>Optica VisionArv</title>
 </head>
 
@@ -69,7 +69,7 @@
                 <source src="./media/video4.mp4" type="video/mp4" />
             </video>
         </div>
-        <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-dark pt-1"  data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev " type="button" data-bs-target="#carouselExampleCaptions"
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                 data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden ">Previous</span>
@@ -162,7 +162,7 @@
                         <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan
                         </p>
 
-                        <div id="carouselExampleControls" class="carousel slide carousel-dark " data-bs-ride="carousel">
+                        <div id="carouselExampleControls" class="carousel slide carousel-dark " data-bs-ride="carousel" data-bs-interval="3000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="marcas__img" src="./media/logo-polo.png" class="d-block w-100"
