--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!----------------Keywords y Descripcion------------------------->
     <meta name="keywords" content="OPTICA, SUCURSALES, CONTACTO, COROBA, TELEFONO , VISIONARV, UBICACION">
-    <meta name="description" content="Somos una de las ópticas más reconocidas del sector.Estamos ubicados Córdoba.Contamos con dos Sucursales en Cordoba Capital">
+    <meta name="description"
+        content="Somos una de las ópticas más reconocidas del sector.Estamos ubicados Córdoba.Contamos con dos Sucursales en Cordoba Capital">
     <link rel="shortcut icon" href="../media/icon.png">
     <!--Enlace Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -45,7 +46,7 @@
                 <div class="collapse navbar-collapse justify-content-end " id="navbarNav">
                     <ul class="navbar-nav align-items-center barraMenu mt-4">
                         <li>
-                            <a class="nav-link" href="./productos.html">Productos</a>                            
+                            <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./obrasociales.html">Obras Sociales</a>
@@ -64,10 +65,11 @@
 
     <!------------------------------------------MAIN---------------------------------------------------------->
     <main>
-        
+
         <h1>Contacto</h1>
         <div class="contacto">
-            <div class="contacto__form ">  <!-----------FORMULARIO DE CONTACTO--------------> 
+            <div class="contacto__form ">
+                <!-----------FORMULARIO DE CONTACTO-------------->
                 <form class="row g-3">
                     <div class="col-md-6">
                         <label for="validationDefault01" class="form-label">Nombre Y Apellido</label>
@@ -122,28 +124,34 @@
                         </div>
                     </div>
                     <!----------------------BOTONES-------------->
-                    <div class="col-12">
-                        <button class="contacto__boton" type="submit">Enviar</button>
-                        <button class="contacto__boton" type="reset" value="Reset">Limpiar</button>
+                    <div class="col-12">                      
+                        <button class="btn btn-outline-danger btForm" type="submit">Enviar</button>
+                        <button class="btn btn-outline-danger btForm" type="reset" value="Reset">Limpiar</button>
                     </div>
                 </form>
             </div>
-                <div class="contacto__ubicacion">  <!-----------UBICACION Y MAPA--------------------->                  
-                    <h2>Nuestras ubicaciones</h2>
-                    <div class="contacto__ubicacion--cont">
-                        <p>Av.Colon 2550,Córdoba.Tel.425-xxx.Lun a Vie. 10 a 18 hs / Sab 9 hs a 13hs</p>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.371352139113!2d-64.21765288470523!3d-31.40389320279038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298968f4a1871%3A0x1299982b7cc03a7a!2sAv.%20Col%C3%B3n%202550%2C%20X5003DCW%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1627440502554!5m2!1ses-419!2sar"
-                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
-                    <div class="contacto__ubicacion--cont">
-                        <p>Av. Amadeo Sabattini 2320,Córdoba.Tel.428-xxx Lun a Vie. 10 a 18 hs</p>
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.3028971812028!2d-64.15727618511127!3d-31.433327181398425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2ceb65f3661%3A0x8de1384a730435f7!2sAv.%20Amadeo%20Sabattini%202320%2C%20X5014AUR%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1632534988224!5m2!1ses!2sar"
-                            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    </div>
+
+            <div class="contacto__imagen">
+                <img src="../media/muestra5.jpg" alt="">
+            </div>
+
+            <div class="contacto__ubicacion">
+                <!-----------UBICACION Y MAPA--------------------->
+                <h2>Nuestras ubicaciones</h2>
+                <div class="contacto__ubicacion--cont">
+                    <p>Av.Colon 2550,Córdoba.Tel.425-xxx.Lun a Vie. 10 a 18 hs / Sab 9 hs a 13hs</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.371352139113!2d-64.21765288470523!3d-31.40389320279038!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x943298968f4a1871%3A0x1299982b7cc03a7a!2sAv.%20Col%C3%B3n%202550%2C%20X5003DCW%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1627440502554!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </div>
+                <div class="contacto__ubicacion--cont">
+                    <p>Av. Amadeo Sabattini 2320,Córdoba.Tel.428-xxx Lun a Vie. 10 a 18 hs</p>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.3028971812028!2d-64.15727618511127!3d-31.433327181398425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2ceb65f3661%3A0x8de1384a730435f7!2sAv.%20Amadeo%20Sabattini%202320%2C%20X5014AUR%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1632534988224!5m2!1ses!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
+        </div>
     </main>
     <!------------------------------------FOOOTER------------------------------------------------------>
     <footer>
