--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -66,28 +66,43 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <h1>Sobre Nosotros</h1>
-                    <p>Somos una Optica donde te ofrecemos calidad con el mejor servicio, atención y garantía.
-                        Todo nuestro personal es óptico profesional capacitado para interpretar sus necesidades
-                        visuales y proponerle las mejores alternativas de solución, acorde siempre a su personalidad y
-                        actividades.
-                        Ubicada en la ciudad de Córdoba, Argentina, dedicada al cuidado de la visión, distribución y
-                        comercialización de primeras marcas.
-                    </p>
-                    <h2>Que ofrecemos</h2>
-                    <p> Sabemos que todo cliente espera hallar productos de calidad, con garantía y de gran
-                        durabilidad.
-                        Por ello,
-                        tenemos en stock lo mejor con productos tales como:
-                    </p>
-                    <ul>
-                        <li>Lentes de sol.</li>
-                        <li>Lentes de sol con graduación.</li>
-                        <li>Lentes de contacto.</li>
-                        <li>Lentes recetados.</li>
-                        <li>Armazones</li>
-                        <li>Bifocales.</li>
-                        <li>Multifocales.</li>
-                    </ul>
+                    <div class="muestrario">
+                        <div class="muestrario__img">
+                            <img src="../media/muestra.jpg" alt="">
+                        </div>
+                        <div class="muestrario__text">
+                            <p>Somos una Optica donde te ofrecemos calidad con el mejor servicio, atención y garantía.
+                                Todo nuestro personal es óptico profesional capacitado para interpretar sus necesidades
+                                visuales y proponerle las mejores alternativas de solución.
+                                Ubicada en la ciudad de Córdoba, estamos dedicados al cuidado de la visión, distribución y
+                                comercialización de primeras marcas.</p>
+                        </div>
+                        <div class="muestrario__img2">
+                            <img src="../media/muestra2.jpg" alt="">
+                        </div>
+                        <div class="muestrario__img3">
+                            <img src="../media/muestra3.jpg" alt="">
+                        </div>
+                        <div class="muestrario__text2">
+                            <p> Sabemos que todo cliente espera hallar productos de calidad, con garantía y de gran
+                                durabilidad.
+                                Por ello,
+                                tenemos en stock lo mejor con productos tales como:
+                            </p>
+                            <ul>
+                                <li>Lentes de sol.</li>
+                                <li>Lentes de sol con graduación.</li>
+                                <li>Lentes de contacto.</li>
+                                <li>Lentes recetados.</li>
+                                <li>Armazones</li>
+                                <li>Bifocales.</li>
+                                <li>Multifocales.</li>
+                            </ul>
+                        </div>
+                        <div class="muestrario__img4">
+                            <img src="../media/muestra4.jpg" alt="">
+                        </div>
+                      </div>
 
                     <!--------------BANNER----------->
                     <div class="banner" data-aos="fade-right" data-aos-duration="1500">
@@ -98,24 +113,6 @@
                         <img src="../media/creditcard).png" alt="">
                         <p class="banner__text ">Medios de pago Efectivo,Debito y Tarjeta de Credito</p>
                     </div>
-                    <!-----------MUESTRARIO----------->
-                    <section class="muestrario" data-aos="fade-left" data-aos-duration="2500">
-                        <div class="muestrario__img1">
-                            <img src="../media/muestra.jpg" alt="">
-                        </div>
-                        <div class="muestrario__img2">
-                            <img src="../media/muestra2.jpg" alt="">
-                        </div>
-                        <div class="muestrario__img3">
-                            <img src="../media/muestra3.jpg" alt="">
-                        </div>
-                        <div class="muestrario__img4">
-                            <img src="../media/muestra4.jpg" alt="">
-                        </div>
-                        <div class="muestrario__img5">
-                            <img src="../media/muestra5.jpg" alt="">
-                        </div>
-                    </section>
             </div>
         </div>
         
