se quitan archivos media

--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -154,7 +154,7 @@
                 </div>
                 <div class="galeria__contVideo">
                     <video class="galeria__contVideo--video" src="../media/lentes.mp4" controls></video>
-                    <video class="galeria__contVideo--video" src="../media/soles.mp4" controls></video>
+                    <video class="galeria__contVideo--video" src="../media/lentes2.mp4" controls></video>
                 </div>
             </div>
         </section>
