--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -111,7 +111,7 @@
                         <img src="../media/discount.png" alt="">
                         <p class="banner__text borde ">Descuentos todas las semanas</p>
                         <img src="../media/creditcard).png" alt="">
-                        <p class="banner__text ">Medios de pago Efectivo,Debito y Tarjeta de Credito</p>
+                        <p class="banner__text ">Pago Efectivo,Debito y Tarjeta de Credito</p>
                     </div>
             </div>
         </div>
