--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -69,13 +69,13 @@
         <section>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
-            <label class="btn btn-outline-warning mb-5" for="btnradio1">Todo</label>
+            <label class="btn btn-outline-danger mb-5" for="btnradio1">Todo</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
-            <label class="btn btn-outline-warning mb-5" for="btnradio2">Lentes</label>
+            <label class="btn btn-outline-danger mb-5" for="btnradio2">Lentes</label>
 
             <input type="radio" class="btn-check" name="btnradio" id="btnradio3">
-            <label class="btn btn-outline-warning mb-5" for="btnradio3">Lentes de Sol</label>
+            <label class="btn btn-outline-danger mb-5" for="btnradio3">Lentes de Sol</label>
 
 
             <div class="galeria" data-aos="zoom-out-up" data-aos-duration="2500">
