--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="../index.html">
-                    <img src="../media/logo.png" alt="">
+                    <img src="../media/logo.png"  alt="logo optica">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,11 +83,9 @@
                         <div class="muestrario__img3">
                             <img src="../media/muestra3.jpg" alt="">
                         </div>
-                        <div class="muestrario__text2">
+                        <div class="muestrario__text">
                             <p> Sabemos que todo cliente espera hallar productos de calidad, con garantía y de gran
-                                durabilidad.
-                                Por ello,
-                                tenemos en stock lo mejor con productos tales como:
+                                durabilidad.Por ello,tenemos en stock lo mejor con productos tales como:
                             </p>
                             <ul>
                                 <li>Lentes de sol.</li>
