--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="./media/logo.png" alt="">
+                    <img src="./media/logo.png" alt="logo optica">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,22 +82,22 @@
             </div>
             <div class="carousel-inner contenedor-slider ">
                 <div class="carousel-item active">
-                    <img src="./media/slide1.jpg" class="d-block w-100 carousel-item__img" alt="...">
+                    <img src="./media/slide1.jpg" class="d-block w-100 carousel-item__img" alt="lentes muestra">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./media/slide2.jpg" class="d-block w-100 carousel-item__img" alt="...">
+                    <img src="./media/slide2.jpg" class="d-block w-100 carousel-item__img" alt="lentes vogue">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./media/slide3.jpg" class="d-block w-100 carousel-item__img" alt="...">
+                    <img src="./media/slide3.jpg" class="d-block w-100 carousel-item__img" alt="lentes varios">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./media/slide4.jpg" class="d-block w-100 carousel-item__img" alt="...">
+                    <img src="./media/slide4.jpg" class="d-block w-100 carousel-item__img" alt="lentes finos">
                     <div class="carousel-caption d-none d-md-block">
                     </div>
                 </div>
