--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -37,7 +37,7 @@
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
                 <a class="navbar-brand logo" href="../index.html">
-                    <img src="../media/logo.png" alt="">
+                    <img src="../media/logo.png"  alt="logo optica">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
