--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
                             <!----------------Galeria principal----------------------->
                             <div class="grilla__catalogoPrin" data-aos="fade-right" data-aos-duration="2000">
                                 <img class="grilla__catalogoPrin--img" src="./media/prin1.jpg" alt="armazon"
-                                    title="armazon negro">
-                                <img class="grilla__catalogoPrin--img" src="./media/prin2.jpg" alt="armazon"
-                                    title="armazon fino">
+                                    title="armazon Polo">
+                                <img class="grilla__catalogoPrin--img" src="./media/prin2.jpg" alt="lentes"
+                                    title="gafas RayBan">
                                 <img class="grilla__catalogoPrin--img" src="./media/prin3.jpg" alt="armazon"
-                                    title="armazon regular">
+                                    title="armazon Ossada">
                                 <img class="grilla__catalogoPrin--img" src="./media/prin4.jpg" alt="lente"
-                                    title="ray ban">
+                                    title="gafas Mormaii">
                                 <img class="grilla__catalogoPrin--img" src="./media/prin5.jpg" alt="lente"
-                                    title="mistral">
+                                    title="armazon Mistral">
                                 <img class="grilla__catalogoPrin--img" src="./media/prin6.jpg" alt="lente"
-                                    title="gucci">
+                                    title="gafas Vulk">
 
                             </div>
                         </section>
@@ -221,7 +221,7 @@
                             </i>
                         </div>
                         <div class="grillaFooter__iconos">
-                            <img src="./media/logo.png" alt="">
+                            <img src="./media/logo.png" alt="logo">
                             <div class="socialMedia">
                                 <a href="#" class="socialMedia__socialIcono">
                                     <i class='bx bxl-instagram-alt'></i>
