--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -132,7 +132,7 @@
             </div>
 
             <div class="contacto__imagen">
-                <img src="../media/muestra5.jpg" alt="">
+                <img src="../media/banner3.jpg" alt="">
             </div>
 
             <div class="contacto__ubicacion">
@@ -148,7 +148,7 @@
                     <p>Av. Amadeo Sabattini 2320,Córdoba.Tel.428-xxx Lun a Vie. 10 a 18 hs</p>
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3404.3028971812028!2d-64.15727618511127!3d-31.433327181398425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2ceb65f3661%3A0x8de1384a730435f7!2sAv.%20Amadeo%20Sabattini%202320%2C%20X5014AUR%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1632534988224!5m2!1ses!2sar"
-                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        width="378" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@
                             </i>
                         </div>
                         <div class="grillaFooter__iconos">
-                            <img src="../media/logo.png" alt="">
+                            <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
                                 <a href="#" class="socialMedia__socialIcono">
                                     <i class='bx bxl-instagram-alt'></i>
