--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -68,7 +68,7 @@
                     <h1>Sobre Nosotros</h1>
                     <div class="muestrario">
                         <div class="muestrario__img">
-                            <img src="../media/muestra.jpg" alt="">
+                            <img src="../media/muestra.jpg" alt="lentes" title="varios Infinit">
                         </div>
                         <div class="muestrario__text">
                             <p>Somos una Optica donde te ofrecemos calidad con el mejor servicio, atención y garantía.
@@ -78,12 +78,12 @@
                                 comercialización de primeras marcas.</p>
                         </div>
                         <div class="muestrario__img2">
-                            <img src="../media/muestra2.jpg" alt="">
+                            <img src="../media/muestra2.jpg" alt="lentes" title="varios Mistral">
                         </div>
                         <div class="muestrario__img3">
-                            <img src="../media/muestra3.jpg" alt="">
+                            <img src="../media/muestra3.jpg" alt="lentes" title="varios Rusty">
                         </div>
-                        <div class="muestrario__text">
+                        <div class="muestrario__text2">
                             <p> Sabemos que todo cliente espera hallar productos de calidad, con garantía y de gran
                                 durabilidad.Por ello,tenemos en stock lo mejor con productos tales como:
                             </p>
@@ -98,7 +98,7 @@
                             </ul>
                         </div>
                         <div class="muestrario__img4">
-                            <img src="../media/muestra4.jpg" alt="">
+                            <img src="../media/muestra4.jpg" alt="lentes" title="varios Polo">
                         </div>
                       </div>
 
@@ -129,7 +129,7 @@
                             </i>
                         </div>
                         <div class="grillaFooter__iconos">
-                            <img src="../media/logo.png" alt="">
+                            <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
                                 <a href="#" class="socialMedia__socialIcono">
                                     <i class='bx bxl-instagram-alt'></i>
