--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -80,76 +80,76 @@
 
             <div class="galeria" data-aos="zoom-out-up" data-aos-duration="2500">
                 <div class="lentes">
-                    <img src="../media/armazon1.jpg" alt="">
+                    <img src="../media/armazon1.jpg" alt="armazon" title="Armazon Ossada">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Ossada - Os1179</h2>
                     </div>
                 </div>
                 <div class="lentes">
-                    <img src="../media/armazon2.jpg" alt="">
+                    <img src="../media/armazon2.jpg" alt="armazon" title="Armazon Mistral">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Mistral - Besquis56</h2>
                     </div>
                 </div>
                 <div class="lentes">
-                    <img src="../media/armazon3.jpg" alt="">
+                    <img src="../media/armazon3.jpg" alt="armazon" title="Armazon Infinit">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Infinit - Keemun</h2>
                     </div>
                 </div>
                 <div class="lentes">
-                    <img src="../media/armazon4.jpg" alt="">
+                    <img src="../media/armazon4.jpg" alt="armazon" title="Armazon Polo">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Polo - Mod2178</h2>
                     </div>
                 </div>
                 <div class="lentes">
-                    <img src="../media/armazon5.jpg" alt="">
+                    <img src="../media/armazon5.jpg" alt="armazon" title="Armazon Polo">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Polo - Wellington96</h2>
                     </div>
                 </div>
                 <div class="lentes">
-                    <img src="../media/armazon6.jpg" alt="">
+                    <img src="../media/armazon6.jpg" alt="armazon" title="Armazon Polo">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Ossada - Os1195</h2>
                     </div>
                 </div>
 
                 <div class="lentesSol">
-                    <img src="../media/sol.jpg" alt="">
+                    <img src="../media/sol.jpg" alt="lenteSol" title="gafas RayBan">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>RayBan - Clubmaster301</h2>
                     </div>
                 </div>
                 <div class="lentesSol">
-                    <img src="../media/sol2.jpg" alt="">
+                    <img src="../media/sol2.jpg"alt="lenteSol" title="gafas Reef">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Reef - Wendy205</h2>
                     </div>
                 </div>
                 <div class="lentesSol">
-                    <img src="../media/sol3.jpg" alt="">
+                    <img src="../media/sol3.jpg" alt="lenteSol" title="gafas Rusty">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Rusty - Vienet</h2>
                     </div>
                 </div>
                 <div class="lentesSol">
-                    <img src="../media/sol4.jpg" alt="">
+                    <img src="../media/sol4.jpg"alt="lenteSol" title="gafas Mormaii">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>Mormaii - Fiji Sx</h2>
                     </div>
                 </div>
                 <div class="lentesSol">
-                    <img src="../media/sol5.jpg" alt="">
+                    <img src="../media/sol5.jpg" alt="lenteSol" title="gafas RayBan">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>RayBan - Wayfarer214</h2>
                     </div>
                 </div>
                 <div class="lentesSol">
-                    <img src="../media/sol6.jpg" alt="">
+                    <img src="../media/sol6.jpg" alt="lenteSol" title="gafas RayBan">
                     <div class="overlay">
-                        <h2>Marca+Modelo</h2>
+                        <h2>RayBan - Justin41</h2>
                     </div>
                 </div>
                 <div class="galeria__contVideo">
@@ -174,7 +174,7 @@
                             </i>
                         </div>
                         <div class="grillaFooter__iconos">
-                            <img src="../media/logo.png" alt="">
+                            <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
                                 <a href="#" class="socialMedia__socialIcono">
                                     <i class='bx bxl-instagram-alt'></i>
