--- a/secciones/obrasociales.html
+++ b/secciones/obrasociales.html
@@ -199,41 +199,14 @@
             </table>
             <!----- iMAGENES OBRA SOCIALES-------->
          <div class="contenedor_obrasoc" data-aos="flip-up" data-aos-duration="2000">
-            <img src="../media/pami.jpg" alt="">
-            <img src="../media/apross.jpg" alt="">
-            <img src="../media/GEA.jpg" alt="">
-            <img src="../media/sancor.png" alt="">
-            <img src="../media/medife.jpg" alt="">
-            <img src="../media/osde4.png" alt="">
+            <img src="../media/pami.jpg" alt="obra social" title="Pami">
+            <img src="../media/apross.jpg" alt="obra social" title="Apross">
+            <img src="../media/GEA.jpg" alt="obra social" title="Gea">
+            <img src="../media/sancor.png" alt="obra social" title="Sancor">
+            <img src="../media/medife.jpg" alt="obra social" title="Medife">
+            <img src="../media/osde4.png" alt="obra social" title="Osde">
             
         </div>
-
-    <!--     <div class="marcas">            
-
-            <div id="carouselExampleControls" class="carousel slide carousel-dark " data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="marcas__img"  src="../media/pami.jpg" class="d-block w-100" alt="...">
-                    <img class="marcas__img"  src="../media/apross.jpg" alt=""" class="d-block w-100" alt="...">
-                    <img class="marcas__img"  src="../media/GEA.jpg" alt=""" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                  <img class="marcas__img"  src="../media/osde.png" class="d-block w-100" alt="...">
-                    <img class="marcas__img"  src="../media/medife.jpg" class="d-block w-100" alt="...">                       
-                    <img class="marcas__img"  src="../media/sancor.jpg" class="d-block w-100" alt="...">
-                  </div>
-                 
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>                 
-        </div>   -->
     </main>
     <footer>
         <div class="container-fluid">
@@ -249,7 +222,7 @@
                             </i>
                         </div>
                         <div class="grillaFooter__iconos">
-                            <img src="../media/logo.png" alt="">
+                            <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
                                 <a href="#" class="socialMedia__socialIcono">
                                     <i class='bx bxl-instagram-alt'></i>
