--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <!------------------------------Navbar------------------------------------->
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
+                <!---------------logo------------->
                 <a class="navbar-brand" href="#">
                     <img src="./media/logo.png" alt="logo optica">
                 </a>
@@ -113,7 +114,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
-        <div class="wave"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;">
+        <div class="wave"><svg viewBox="0 0 500 150" preserveAspectRatio="none" class="wave__svg">
                 <path d="M0.00,50.06 C134.62,-29.21 270.63,193.13 502.58,55.76 L500.00,150.22 L0.00,150.22 Z"
                     style="stroke: none; fill:#f9e9e9;"></path>
             </svg> </div>
@@ -157,11 +158,10 @@
                             <img class="grilla__banner--img" src="./media/visa.png" alt="">
                         </aside>
                     </div>
-                    <!----------------Galeria de marcas---------------------------->
+                    <!---------------Slider de marcas---------------------------->
                     <div class="marcas">
                         <p class="marcas__text" data-aos="zoom-out-up" data-aos-duration="800">Marcas que nos acompañan
                         </p>
-
                         <div id="carouselExampleControls" class="carousel slide carousel-dark " data-bs-ride="carousel" data-bs-interval="3000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -212,6 +212,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="grillaFooter">
+                          <!----------SECCION IZQUIERDA---------------------->
                         <div class="grillaFooter__direc">
                             <i class='bx bx-home '>
                                 <p> Av.Colon 2550,Córdoba. Tel.425-xxx</p>
@@ -220,6 +221,7 @@
                                 <p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p>
                             </i>
                         </div>
+                         <!----------SECCION CENTRAL---------------------->
                         <div class="grillaFooter__iconos">
                             <img src="./media/logo.png" alt="logo">
                             <div class="socialMedia">
@@ -233,6 +235,7 @@
                             <div class="line"></div>
                             <p class="text">Copyright &copyArev Fabi</p>
                         </div>
+                        <!--------------SECCION DERECHA------------------>
                         <div class="grillaFooter__secciones">
                             <i class='bx bx-glasses'><a href="./secciones/productos.html">Productos</a></i>
                             <i class='bx bx-list-ol'><a href="./secciones/obrasociales.html">Obras Sociales</a></i>
