--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -35,6 +35,7 @@
         <!------------------------------Navbar------------------------------------->
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
+                <!---------------logo------------->
                 <a class="navbar-brand logo" href="../index.html">
                     <img src="../media/logo.png"  alt="logo optica">
                 </a>
@@ -77,8 +78,8 @@
             <input type="radio" class="btn-check" name="btnradio" id="btnradio3">
             <label class="btn btn-outline-danger mb-5" for="btnradio3">Lentes de Sol</label>
 
-
-            <div class="galeria" data-aos="zoom-out-up" data-aos-duration="2500">
+            <!-------------------Galeria productos------------------------->
+            <div class="galeria" data-aos="zoom-out-up" data-aos-duration="2300">
                 <div class="lentes">
                     <img src="../media/armazon1.jpg" alt="armazon" title="Armazon Ossada">
                     <div class="overlay">
@@ -158,13 +159,13 @@
                 </div>
             </div>
         </section>
-
     </main>
     <footer>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="grillaFooter">
+                          <!----------SECCION IZQUIERDA---------------------->
                         <div class="grillaFooter__direc">
                             <i class='bx bx-home '>
                                 <p> Av.Colon 2550,Córdoba. Tel.425-xxx</p>
@@ -173,6 +174,7 @@
                                 <p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p>
                             </i>
                         </div>
+                         <!----------SECCION CENTRAL---------------------->
                         <div class="grillaFooter__iconos">
                             <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
@@ -186,6 +188,7 @@
                             <div class="line"></div>
                             <p class="text">Copyright &copyArev Fabi</p>
                         </div>
+                        <!--------------SECCION DERECHA------------------>
                         <div class="grillaFooter__secciones">
                             <i class='bx bx-glasses'><a href="#">Productos</a></i>
                             <i class='bx bx-list-ol'><a href="../secciones/obrasociales.html">Obras Sociales</a></i>
