--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -36,8 +36,9 @@
         <!------------------------------Navbar------------------------------------->
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
+                <!---------------logo------------->
                 <a class="navbar-brand logo" href="../index.html">
-                    <img src="../media/logo.png"  alt="logo optica">
+                    <img src="../media/logo.png" alt="logo optica">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +66,6 @@
 
     <!------------------------------------------MAIN---------------------------------------------------------->
     <main>
-
         <h1>Contacto</h1>
         <div class="contacto">
             <div class="contacto__form ">
@@ -96,7 +96,6 @@
                             <option>Swiss Medical</option>
                         </select>
                     </div>
-
                     <div class="col-md-4">
                         <label for="validationDefault04" class="form-label">Motivo de contacto</label>
                         <select class="form-select" id="validationDefault04" required>
@@ -124,19 +123,18 @@
                         </div>
                     </div>
                     <!----------------------BOTONES-------------->
-                    <div class="col-12">                      
+                    <div class="col-12">
                         <button class="btn btn-outline-danger btForm" type="submit">Enviar</button>
                         <button class="btn btn-outline-danger btForm" type="reset" value="Reset">Limpiar</button>
                     </div>
                 </form>
             </div>
-
+             <!-----------BANNER IMAGEN---------------------->
             <div class="contacto__imagen">
                 <img src="../media/banner3.jpg" alt="">
             </div>
-
-            <div class="contacto__ubicacion">
-                <!-----------UBICACION Y MAPA--------------------->
+            <!------------------------UBICACION Y MAPA--------------------->
+            <div class="contacto__ubicacion">               
                 <h2>Nuestras ubicaciones</h2>
                 <div class="contacto__ubicacion--cont">
                     <p>Av.Colon 2550,Córdoba.Tel.425-xxx.Lun a Vie. 10 a 18 hs / Sab 9 hs a 13hs</p>
@@ -158,7 +156,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
-                    <div class="grillaFooter">
+                    <div class="grillaFooter">      
+                         <!----------SECCION IZQUIERDA---------------------->
                         <div class="grillaFooter__direc">
                             <i class='bx bx-home '>
                                 <p> Av.Colon 2550,Córdoba. Tel.425-xxx</p>
@@ -167,6 +166,7 @@
                                 <p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p>
                             </i>
                         </div>
+                         <!----------SECCION CENTRAL---------------------->
                         <div class="grillaFooter__iconos">
                             <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
@@ -180,6 +180,7 @@
                             <div class="line"></div>
                             <p class="text">Copyright &copyArev Fabi</p>
                         </div>
+                         <!--------------SECCION DERECHA------------------>
                         <div class="grillaFooter__secciones">
                             <i class='bx bx-glasses'><a href="../secciones/productos.html">Productos</a></i>
                             <i class='bx bx-list-ol'><a href="../secciones/obrasociales.html">Obras Sociales</a></i>
@@ -198,4 +199,5 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
 </body>
+
 </html>
