--- a/secciones/nosotros.html
+++ b/secciones/nosotros.html
@@ -35,6 +35,7 @@
         <!------------------------------Navbar------------------------------------->
         <nav class="navbar navbar-expand-lg navbar-light navegador">
             <div class="container-fluid">
+                <!---------------logo------------->
                 <a class="navbar-brand logo" href="../index.html">
                     <img src="../media/logo.png"  alt="logo optica">
                 </a>
@@ -61,6 +62,7 @@
             </div>
         </nav>
     </header>
+
     <main>
         <div class="container-fluid">
             <div class="row">
@@ -112,14 +114,15 @@
                         <p class="banner__text ">Pago Efectivo,Debito y Tarjeta de Credito</p>
                     </div>
             </div>
-        </div>
-        
+        </div>        
     </main>
+    
     <footer>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-12 col-md-12">
                     <div class="grillaFooter">
+                          <!----------SECCION IZQUIERDA---------------------->
                         <div class="grillaFooter__direc">
                             <i class='bx bx-home '>
                                 <p> Av.Colon 2550,Córdoba. Tel.425-xxx</p>
@@ -128,6 +131,7 @@
                                 <p>Av.Amadeo Sabattini 2320,Córdoba. Tel.428-xxx.</p>
                             </i>
                         </div>
+                         <!----------SECCION CENTRAL---------------------->
                         <div class="grillaFooter__iconos">
                             <img src="../media/logo.png" alt="logo">
                             <div class="socialMedia">
@@ -141,6 +145,7 @@
                             <div class="line"></div>
                             <p class="text">Copyright &copyArev Fabi</p>
                         </div>
+                        <!--------------SECCION DERECHA------------------>
                         <div class="grillaFooter__secciones">
                             <i class='bx bx-glasses'><a href="../secciones/productos.html">Productos</a></i>
                             <i class='bx bx-list-ol'><a href="../secciones/obrasociales.html">Obras Sociales</a></i>
